# VSCode

analisisbigdata/: Tugas 1.ipynb  Tugas 2.ipynb  Tugas 3.ipynb  Tugas 4.ipynb  Tugas 5.ipynb  Tugas 6.ipynb  Tugas 7 K_Means_CNN.ipynb
aplikasi/: pubspec.yaml
aplikasi/lib/: main.dart
aplikasi/windows/: CMakeLists.txt
aplikasitry/: emulator.bat  pubspec.yaml
aplikasitry/lib/: main.dart  temperature.dart
aplikasitry/linux/: my_application.cc
aplikasitry/test/: widget_test.dart
fungsional/: expend.py  game.py  m1l3.py  m1t1.py  m1t2.py  nilai2.py
games/: pubspec.yaml
getcli_project/: README.md  pubspec.yaml
kbt/: pistop.html  style.css
machinelearning/modul6/: README.md  label_encoder.joblib  pyproject.toml
machinelearning/modul6/src/: Citra.py  Tabular.py  Teks.py  latihan.py  praktikum.py
machinelearning/modul6/src/model/: citra.h5  gender_encoder.joblib  label_encoder.joblib  obesity_encoder.joblib  scaler.joblib  tabular.h5  teks.h5  tokenizer.joblib
machinelearning/projectUAP/: .pdm-python  PrediksiProfit.ipynb  README.md  kaggle.json  pyproject.toml
machinelearning/projectUAP/model/: PredictProfit.ipynb  PrediksiProfit.ipynb  ProfitPredict.ipynb  model_dnn.h5  model_dnn.keras  model_ffnn.h5  model_ffnn.keras  preprocessor.joblib
machinelearning/projectUAP/src/: predict.py
smarthome/: pubspec.yaml
snakegame/: .firebaserc  pubspec.yaml
strukdat/: treetraversal.py
web/: Calculator.html  Calculator.js  ILab.css  ILab.html  ToDoList.css  ToDoList.html  ToDoList.js  aaa.html  calculator.css  tabel.css  tabel.html
web/UAP/: 1.html
(+312 files in other folders)
