[project]
name = "Latihan-modul-6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "streamlit==1.41.1",
    "tensorflow==2.18.0",
    "joblib>=1.4.2",
    "scikit-learn>=1.5.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "streamlit run ./src/praktikum.py"
