[project]
name = "projectUAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "xrenxf", email = "kristinwulan113@gmail.com"},
]
dependencies = [
    "streamlit>=1.41.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.0",
    "tensorflow>=2.18.0",
    "plotly>=5.24.1",
    "dill>=0.3.9"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "streamlit run ./src/predict.py"
